# volksforo

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  webpack.config.js
migrations/: cqlsh.sql
resources/js/: attachments.js  chat.js
resources/sass/: _variables.scss  chat.scss  flash.scss  form.scss  generic.scss  layout.scss  main.scss  modal.scss  nav.scss  struct.scss  thread.scss  users.scss  var.scss
src/: error.rs  filters.rs  lib.rs  main.rs  session.rs  util.rs
src/controller/: account.rs  asset.rs  error.rs  mod.rs  node.rs  thread.rs
src/middleware/: context.rs  flash.rs  mod.rs
src/model/: mod.rs  node.rs  post.rs  thread.rs  ugc.rs  user.rs  user_session.rs
src/perm/: category.rs  category_values.rs  collection.rs  collection_values.rs  error.rs  flag.rs  item.rs  item_values.rs  mask.rs  mod.rs  resource.rs  test.rs
src/test/: ffmpeg.rs
src/view/: account.rs  index.rs  mod.rs  thread.rs
templates/: error.html  forum.html  index.html  thread.html
templates/account/: login.html  register.html
templates/attachment/: upload.html
templates/container/: public.html
templates/ugc/: post.html  ugc.html
templates/util/: flash.html  paginator.html
