[package]
name = "volksforo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-multipart = "0.6" # Multipart form data
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"      # Actix
anyhow = "1.0"       # Result<> development ease
askama = { version = "0", features = ["with-actix-web"] } # Templating
askama_actix = "0.14"
bitflags = "1"       # Bitmap structs (permission system)
blake3 = "1.3"       # Nonce
chrono = {version = "0.4", features = ["std"] }# Time (Scylla co-dependency)
dashmap = "5"        # Concurrent associative arrays (permission system)
dotenv = "0"         # Environmental variables
env_logger = "0.10"  # 
futures-util = "0.3" # Actix Middleware
hexafreeze = "0.5"   # Snowflake IDs for all 'serialized' int64 in Scylla
once_cell = "1.17"   # Global statics
log = "0.4"          # Logging macros
rand = "0.8"
rust-argon2 = "1"    # Password encryption
scylla = "0"         # ScyllaDB
serde = { version = "1.0", features = ["derive"] } # [De]serialization and Actix forms
tokio = { version = "1.26", features = ["rt-multi-thread", "macros"] }
uuid = {version = "1.3", features = ["v4"] } # UUID (Scylla compatible)

[dev-dependencies]
